#=======================================================================================================================
         project(resources-module LANGUAGES CXX)
#=======================================================================================================================
     add_library(resources-module)
#=======================================================================================================================
add_subdirectory(core)
#=======================================================================================================================